[package]
name = "rocket-multipart-form-data"
version = "0.3.2"
authors = ["Magic Len <len@magiclen.org>"]
repository = "https://github.com/senthilkumarv/rocket-multipart-form-data"
homepage = "https://magiclen.org/rocket-multipart-form-data"
keywords = ["rocket", "server", "web", "multipart", "form-data"]
categories = ["parsing"]
description= "This crate provides a multipart parser for the Rocket framework."
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "magiclen/rocket-multipart-form-data", branch = "master" }

[dependencies]
ring = "0.13.3"
rocket = "0.4.0-rc.1"
mime = "0.3.12"
multipart = "0.15.3"
chrono = "0.4.6"

[dev-dependencies]
rocket_codegen = "0.4.0-rc.1"
